[gd_scene load_steps=3 format=3 uid="uid://c2qdrgemafodd"]

[ext_resource type="Script" uid="uid://o6uatjefk7ev" path="res://scripts/ui/screens/main_menu.gd" id="1_nee2d"]
[ext_resource type="Theme" uid="uid://ssbhgf25fdh8" path="res://assets/resources/ui/themes/button/button_theme.tres" id="2_j84ir"]

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -315.0
offset_right = 488.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nee2d")

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_j84ir")
theme_override_font_sizes/font_size = 50
text = "New Game
"

[node name="LoadGameButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_j84ir")
theme_override_font_sizes/font_size = 50
text = "Load Game"

[node name="HelpButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_j84ir")
theme_override_font_sizes/font_size = 50
text = "Help
"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_j84ir")
theme_override_font_sizes/font_size = 50
text = "Settings
"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_j84ir")
theme_override_font_sizes/font_size = 50
text = "Quit
"

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
